traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:20: error: '(' expected but identifier found.
    if k(!=1){
       ^TraversalZigZag:29: error: illegal start of simple expression
    }
    ^