traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var a=getMondeHauteur()
  var b=getMondeLargeur()
  var y=0
  var cpt=0
  var k=1
  
  while (getX()!=(a-1) && getY!=(b-1)){
    if (k==1){
    	while (k<b){      
       	ecritMessage(cpt)
      	setPos(k,y)
      	cpt+=1
      	k+=1
      }
      ecritMessage(cpt)
    y+=1
    setPos(k-1,y)
    cpt+=1  
    }
    if k(!=1){
      k-=1
      while(k>1){
        critMessage(cpt)
      	setPos(k,y)
      	cpt+=1
      	k-=1
      }
    }
    }
      
for (k<-1 to (b-1)){
  ecritMessage(cpt)
      setPos(k,y)
      cpt+=1
}
  ecritMessage(cpt)
}